Fix search clear button not showing when name is selected programmatically from custom filter menu, add z-index

--- a/style.css
+++ b/style.css
@@ -1291,6 +1291,7 @@ body {
     justify-content: center;
     outline: none;
     transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 10;
 }
 
 #btn-clear-dashboard-search:hover {
